<resources>
	<string name="app_name" translatable="false">FantLab</string>
	<string name="app_name_full" translatable="false">FantLab for Android</string>
	<string name="scroll_behavior" translatable="false">@string/appbar_scrolling_view_behavior</string>
	<string name="linear_layout_manager" translatable="false">ru.fantlab.android.ui.widgets.recyclerview.layoutManager.LinearManager</string>
	<string name="grid_layout_manager" translatable="false">ru.fantlab.android.ui.widgets.recyclerview.layoutManager.GridManager</string>
	<string name="staggered_layout_manager" translatable="false">ru.fantlab.android.ui.widgets.recyclerview.layoutManager.StaggeredManager</string>
	<string name="bbn_fab_default_behavior" translatable="false">ru.fantlab.android.ui.widgets.FloatingActionButtonBehavior</string>
	<string name="custom_tablet_provider" translatable="false">ru.fantlab.android.ui.widgets.TabletBehavior</string>
	<string name="icon_transition" translatable="false">profile_image_transition</string>
	<string name="title_transition" translatable="false">profile_title_transition</string>
	<string name="light_theme_mode" translatable="false">Light Theme</string>
	<string name="dark_theme_mode" translatable="false">Dark Theme</string>
	<string name="amlod_theme_mode" translatable="false">Amlod Theme</string>
	<string name="mid_night_blue_theme_mode" translatable="false">Mid Night Blue</string>
	<string name="bluish_theme" translatable="false">Bluish Theme</string>
	<string name="red_theme_mode" translatable="false">Red</string>
	<string name="pink_theme_mode" translatable="false">Pink</string>
	<string name="purple_theme_mode" translatable="false">Purple</string>
	<string name="deep_purple_theme_mode" translatable="false">Deep Purple</string>
	<string name="indigo_theme_mode" translatable="false">Indigo</string>
	<string name="blue_theme_mode" translatable="false">Blue</string>
	<string name="light_blue_theme_mode" translatable="false">Light Blue</string>
	<string name="cyan_theme_mode" translatable="false">Cyan</string>
	<string name="teal_theme_mode" translatable="false">Teal</string>
	<string name="green_theme_mode" translatable="false">Green</string>
	<string name="light_green_theme_mode" translatable="false">Light Green</string>
	<string name="lime_theme_mode" translatable="false">Lime</string>
	<string name="yellow_theme_mode" translatable="false">Yellow</string>
	<string name="amber_theme_mode" translatable="false">Amber</string>
	<string name="orange_theme_mode" translatable="false">Orange</string>
	<string name="deep_orange_theme_mode" translatable="false">Deep Orange</string>
	<string name="share">Share</string>
	<string name="in_progress">Loading, please wait…</string>
	<string name="cancel">Cancel</string>
	<string name="ok">OK</string>
	<string name="error">Error</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="no_data">No data available</string>
	<string name="no_news">No news</string>
	<string name="no_responses">No responses</string>
	<string name="no_messages">No messages</string>
	<string name="no_plans">No messages</string>
	<string name="reload">Reload</string>
	<string name="press_again_to_exit">Press once again to exit</string>
	<string name="logout">Logout</string>
	<string name="confirm_message">Are you sure?</string>
	<string name="guest">Guest</string>
	<string name="home">Home</string>
	<string name="profile">Profile</string>
	<string name="bibliographies">Bibliographies</string>
	<string name="news">News</string>
	<string name="responses">Responses</string>
	<string name="bookcases">Bookcases</string>
	<string name="analogs">Analogs</string>
	<string name="classification">Classification</string>
	<string name="forum">Forum</string>
	<string name="blogs">Blogs</string>
	<string name="search">Search</string>
	<string name="scan_barcode">Scan barcode</string>
	<string name="scan_canceled">Scan canceled</string>
	<string name="clear">Clear</string>
	<string name="unauthorized_user">Unauthorized user</string>
	<string name="sign_in_to_fantlab">Sign in using your FantLab account</string>
	<string name="sign_in">Sign in</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="or_character">or</string>
	<string name="proceed_without_login">Proceed without login</string>
	<string name="required_field">Required field</string>
	<string name="failed_login">Sign in failed</string>
	<string name="second_failed_login">Sign in failed. Try again.</string>
	<string name="user_blocked">Your profile will be unblocked at %s</string>
	<string name="user_blocked_forever">Unfortunately your profile is blocked forever</string>
	<string name="minimum_three_chars">Minimum characters (2)</string>
	<string name="user">User</string>
	<string name="authors">Authors</string>
	<string name="works">Works</string>
	<string name="editions">Editions</string>
	<string name="awards">Awards</string>
	<string name="content">Content</string>
	<string name="photos">Photos</string>
	<string name="results_warning">Too many results \nShowing the max API allows</string>
	<string name="no_search_results">No search results</string>
	<string name="no_results">No results</string>
	<string name="overview">Overview</string>
	<string name="marks">Marks</string>
	<string name="network_error">Error occurred while communicating to the server</string>
	<string name="unexpected_error">Unexpected error while requesting API</string>
	<string name="request_error">Error requesting server, please try again later</string>
	<string name="gender">Gender</string>
	<string name="block_permanent">User blocked permanently</string>
	<string name="author_page">Author page</string>
	<string name="read_blog">Read blog</string>
	<string name="mark_count">Mark count</string>
	<string name="response_count">Response count</string>
	<string name="votes_count">Votes</string>
	<string name="description_count">Descriptions</string>
	<string name="classification_count">Classifications</string>
	<string name="ticket_count">Tickets</string>
	<string name="forum_messages_count">Forum messages count</string>
	<string name="topic_count">Topics</string>
	<string name="bookcase_count">Bookcases</string>
	<string name="no_marks">No marks</string>
	<string name="no_notes">No notes</string>
	<string name="no_description">No description</string>
	<string name="view_response">Review response</string>
	<string name="no_editions">No editions</string>
	<string name="no_analogs">No analogs</string>
	<string name="no_works">No works</string>
	<string name="no_content">No content</string>
	<string name="no_classification">No classification</string>
	<string name="copyright">© %s</string>
	<string name="author_not_opened">Author is not yet open</string>
	<string name="settings">Settings</string>
	<string name="theme_title">Theme</string>
	<string name="language">Language</string>
	<string name="select">Select</string>
	<string name="success">Success</string>
	<string name="change_theme_warning">Theme was changed</string>
	<string name="change_mark">Change mark</string>
	<string name="delete_mark">Delete mark</string>
	<string name="select_mark">Select mark</string>
	<string name="select_action">Select action</string>
	<string name="show_profile">Show profile</string>
	<string name="vote">Vote for review</string>
	<string name="error_highlighting_editor">Error highlighting editor</string>
	<string name="submit">Submit</string>
	<string name="close">Close</string>
	<string name="unsaved_data_warning">Are you sure you want to cancel the entry?</string>
	<string name="discard">Close</string>
	<string name="comment">Comment</string>
	<string name="type_here">Start type here</string>
	<string name="title">Title</string>
	<string name="link">Link</string>
	<string name="insert">Insert</string>
	<string name="editor">Editor</string>
	<string name="copy">Copy</string>
	<string name="open">Open</string>
	<string name="message">Message</string>
	<string name="send_message">Send message</string>
	<string name="no_title">Without title</string>
	<string name="success_copied">Success copied</string>
	<string name="not_recognized">Not recognized</string>
	<string name="bibiography">Bibliography</string>
	<string name="no_bibliography">No bibliography</string>
	<string name="select_sort">Sort by…</string>
	<string name="sorting">Sorting</string>
	<string name="sort_mark">Mark</string>
	<string name="sort_rating">Rate</string>
	<string name="sort_date">Date</string>
	<string name="sort_name">Name</string>
	<string name="sort_country">Country</string>
	<string name="sort_type">Type</string>
	<string name="sort_lang">Language</string>
	<string name="editor_response">Response Editor</string>
	<string name="editor_comment">Comment Editor</string>
	<string name="editor_message">Message Editor</string>
	<string name="wins">Awards and prizes</string>
	<string name="noms">Nominations</string>
	<string name="similar">Similar books</string>
	<string name="about">About book</string>
	<string name="author">Author</string>
	<string name="classificator">Classifier</string>
	<string name="genre">Genre</string>
	<string name="characteristics">Characteristics</string>
	<string name="locate">Scene</string>
	<string name="age">Age</string>
	<string name="linearity">Linearity</string>
	<string name="time">Time</string>
	<string name="story">Story</string>
	<string name="class_sended">Classification sent</string>
	<string name="class_needed">Necessary classification parameters are not selected</string>
	<string name="awards_list">Awards</string>
	<string name="contests">Contests</string>
	<string name="nominations">Nominations</string>
	<string name="no_nominations">No nominations</string>
	<string name="no_contests">No contests</string>
	<string name="about_award">About award</string>
	<string name="comments">Comments</string>
	<string name="notes">Notes</string>
	<string name="award_not_opened">Award is not yet open</string>
	<string name="save">Save</string>
	<string name="save_hint">Save to send later</string>
	<string name="response_short_text">Response is too short (minimum 50 characters)</string>
	<string name="too_short_text">Too short text</string>
	<string name="set_mark">Set mark</string>
	<string name="cannotvote">You can not vote for your review</string>
	<string name="cannotvote_novice">Users with the class \"Novice\" can not vote for reviews</string>
	<string name="about_author">About author</string>
	<string name="description">Description</string>
	<string name="information">Information</string>
	<string name="note">Note</string>
	<string name="scan">Scan</string>
	<string name="failed_data">Failed to load data</string>
	<string name="spoiler">Warning, spoiler!</string>
	<string name="markchart_1">Histogram of distribution of marks</string>
	<string name="markchart_2">Histogram by type of work</string>
	<string name="select_chart">Select type</string>
	<string name="incl">Included in</string>
	<string name="about_app">About</string>
	<string name="send_with">Send with Telegram</string>
	<string name="developers">Developers</string>
	<string name="developers_names" translatable="false">\kenrube\n\ilyakokhan</string>
	<string name="discuss">Discuss on forum</string>
	<string name="github" translatable="false">Github</string>
	<string name="colored_navbar_summary">Enable colored navigation bar</string>
	<string name="colored_navbar_title">Colorless Navbar</string>
	<string name="list_animation_title">List animation</string>
	<string name="list_animation_summary">Animating list items</string>
	<string name="theme_color_title">Colour</string>
	<string name="theme_color_summary">Primary color of the application</string>
	<string name="back_button_summary">Press back button twice to close application</string>
	<string name="back_button_title">Double click to exit</string>
	<string name="bookcase_access">Bookcase is visible for other users</string>
</resources>