<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="wrap_content"
	app:bbn_itemAnimationDuration="200"
	app:bbn_itemColorActive="?colorAccent"
	app:bbn_itemColorInactive="?android:textColorTertiary"
	app:bbn_rippleColor="@color/transparent"
	>

	<item
		android:id="@+id/news"
		android:color="?colorPrimary"
		android:contentDescription="@string/news"
		android:icon="@drawable/ic_home"
		android:title="@string/news"
		/>

	<item
		android:id="@+id/forum"
		android:color="?colorPrimary"
		android:contentDescription="@string/forum"
		android:icon="@drawable/ic_home"
		android:title="@string/forum"
		/>

	<item
		android:id="@+id/blogs"
		android:color="?colorPrimary"
		android:contentDescription="@string/blogs"
		android:icon="@drawable/ic_home"
		android:title="@string/blogs"
		/>

</menu>