<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android">

	<group android:id="@+id/sign_in_group">
		<item
			android:id="@+id/sign_in"
			android:icon="@drawable/ic_logout"
			android:title="@string/sign_in"
			/>
	</group>

	<group android:id="@+id/home_group">
		<item
			android:id="@+id/mainView"
			android:icon="@drawable/ic_home"
			android:title="@string/home"
			/>
	</group>

	<group android:id="@+id/profile_group">
		<item
			android:id="@+id/profile"
			android:icon="@drawable/ic_profile"
			android:title="@string/profile"
			/>
	</group>

	<!--<group
		android:id="@+id/group_three"
		android:checkableBehavior="none">
		<item
			android:id="@+id/reportBug"
			android:icon="@drawable/ic_bug"
			android:title="@string/report_issue"/>
		<item
			android:id="@+id/faq"
			android:icon="@drawable/ic_info"
			android:title="@string/faq"/>
		<item
			android:id="@+id/settings"
			android:icon="@drawable/ic_settings"
			android:title="@string/settings"/>

		<item
			android:id="@+id/restorePurchase"
			android:icon="@drawable/ic_money"
			android:title="@string/restore_purchases"/>

		<item
			android:id="@+id/about"
			android:icon="@drawable/ic_info"
			android:title="@string/about"/>
	</group>-->

</menu>