<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.modules.bookcases.editor.BookcaseEditorActivty"
    >

    <LinearLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <include layout="@layout/appbar_start_margin" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_s_large"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <Spinner
                    android:id="@+id/bookcaseType"
                    android:gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_normal"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/bookcaseName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_normal"
                    android:hint="Название"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/bookcaseNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <CheckBox
                        android:id="@+id/bookcasePublic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:checked="true"/>

                    <ru.fantlab.android.ui.widgets.FontTextView
                        style="@style/TextAppearance.AppCompat.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/bookcase_access"/>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/bookcaseDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_normal"
                    android:hint="@string/description"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/bookcaseDescriptionEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:minLines="2"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >

                    <ru.fantlab.android.ui.widgets.FontButton
                        android:id="@+id/bookcaseEditSave"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>

                    <ProgressBar
                        android:id="@+id/progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone"
                        />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>

                    <ru.fantlab.android.ui.widgets.FontButton
                        android:id="@+id/bookcaseEditCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <include layout="@layout/nav_menu_layout" />

</androidx.drawerlayout.widget.DrawerLayout>